complete update sequqnce for Mac OS X